2004-11-02 Alain Magloire
	Refactor ICDIConfiguratio --> ICDISessionConfiguration and ICDITargetConfiguration
	* cdi/org/eclipse/cdt/debug/core/cdi/Session.java
	* cdi/org/eclipse/cdt/debug/core/cdi/SessionConfiguration.java
	* cdi/org/eclipse/cdt/debug/core/cdi/model/Target.java
	* cdi/org/eclipse/cdt/debug/core/cdi/model/TargetConfiguration.java

2004-11-02 Alain Magloire
	Tentative fix for PR 77435
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/VariableManager.java

2004-10-31 Alain Magloire
	Tentative fix for PR 74496

2004-10-31 Alain Magloire
	Refactor ICDIVariableObject --> ICDIVariableDescriptor
	Refactor ICDIArgumentObject --> ICDIArgumentDescriptor
	Refactor ICDIRegisterObject --> ICDIRegisterDescriptor
	Addition ICDIThreadStorageDescriptor, ICDIThreadStorage
	Addition ICDILocalVariableDescriptor, ICDILocalVariable
	Addition ICDIGlobalVariableDescriptor, ICDIGlovalVariable

	Adjust the classes to the changes.

2004-10-29 Alain Magloire
	Remove of ICDISharedLibraryManager
	* cdi/org/eclipse/cdt/debug/core/cdi/Session.java
	* cdi/org/eclipse/cdt/debug/core/cdi/SharedLibraryManager.java
	* cdi/org/eclipse/cdt/debug/core/cdi/model/Target.java
	* cdi/org/eclipse/cdt/debug/core/cdi/model/SharedLibraryManagement.java

	* src/org/eclipse/cdt/debug/mi/core/GDBCDIDebugger.java
	* src/org/eclipse/cdt/debug/mi/core/GDBServerCDIDebugger.java

2004-10-28 Alain Magloire
	Add ICDIValue.getType() and ICDIExpression.geType() new methods.

2004-10-26 Alain Magloire
	Remove ICDIMemoryManager in CDI
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/Session.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/MemoryManager.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/EventManager.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/Target.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/model/MemoryBlock.java
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/event/CreatedEvent.java

2004-10-26 Alain Magloire
	Remove of ICDISourceManager in CDI
	* cdi/org/eclipse/cdt/debug/mi/core/cdi/Session.java